# factoriod

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  factorio.bash  factorio.path  factorio.service  factoriod.service  factoriod.sln  factoriod.sysusers
.github/: release.yml
.github/workflows/: release.yml  rust.yaml
Factoriod.Rcon/: Factoriod.Rcon.csproj  RconOptions.cs  ServiceCollectionExtensions.cs
crates/download-latest-headless/: Cargo.toml
crates/extract/: Cargo.toml
crates/factorio-http-api/: Cargo.toml
crates/factorio-http-api/examples/: download_url.rs  versions.rs
crates/factorio-http-api/src/: download.rs
crates/factoriod/: Cargo.toml
crates/factoriod-config/: Cargo.toml
crates/factoriod/examples/: versions.rs
crates/factoriod/src/: lib.rs  main.rs  utils.rs
crates/factoriod/src/api/: download.rs
crates/factoriod/src/config/map_gen_settings/: map_gen_size.rs
crates/factoriod/src/daemon/: factorio_server.rs
crates/private/factorio-api/: Cargo.toml  README.md
crates/private/factorio-api/examples/: download_url.rs  versions.rs
crates/private/factorio-api/src/: download.rs  lib.rs
docs/: InRelease  KEY.asc  Packages  README.md  Release  Release.gpg  asasine_factoriod.list  factoriod.0.1.4.deb  factoriod.0.1.5.deb  factoriod.0.1.6.deb  factoriod.0.1.7.deb  factoriod.0.1.8.deb  factoriod.0.1.9.deb
examples/: download_url.rs  versions.rs
src/: config.rs  daemon.rs  factorio_api.rs  factorio_config.rs  lib.rs  main.rs  server_opts.rs  utils.rs
src/Factoriod.Daemon/: FactorioHostedService.cs  FactorioOptions.cs  FactorioProcess.cs  Factoriod.Daemon.csproj  FileInfoExtensions.cs  PathUtilities.cs  Program.cs  README.md  appsettings.Development.json  appsettings.json  factoriod.service
src/Factoriod.Fetcher/: Distro.cs  FactorioVersion.cs  Factoriod.Fetcher.csproj  FromToVersion.cs  HttpContentExtensions.cs  ModFetcher.cs  Program.cs  ReleaseBuild.cs  ReleaseFetcher.cs  VersionFetcher.cs
src/Factoriod.Models/: Distro.cs  FactorioDirectory.cs  FactorioUpdate.cs  FactorioVersion.cs  Factoriod.Models.csproj  FromToVersion.cs  ReleaseBuild.cs  Save.cs
src/Factoriod.Rcon/: FactorioCommandParser.cs  Factoriod.Rcon.csproj  RconClient.cs  RconOptions.cs  ServiceCollectionExtensions.cs
src/Factoriod.Utilities/: Factoriod.Utilities.csproj  IPAddressTypeConverter.cs  LinqExtensions.cs  PathUtilities.cs  PrintableReadOnlyCollection.cs  PrintableReadOnlyDictionary.cs  RestartableBackgroundService.cs  ServiceCollectionExtensions.cs
src/api/: download.rs  mod.rs
src/daemon/: factorio_server.rs
src/factorio_api/: download.rs
src/factorio_daemon/: factorio_server.rs
test/Factoriod.Models.Test/: Factoriod.Models.Test.csproj
test/Factoriod.Rcon.Test/: FactorioCommandParserTests.cs  Factoriod.Rcon.Test.csproj
test/Factoriod.Utilities.Test/: Factoriod.Utilities.Test.csproj  IPAddressTypeConverterTests.cs  (+5 more)
(+55 files in other folders)
