[package]
name = "factoriod"
version = "0.1.0"
edition = "2021"
default-run = "factoriod"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
nutype = { version = "0.4.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
systemd-directories = "0.1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xz2 = "0.1"

[dev-dependencies]
serde_json = "1.0.114"
tempfile = "3.10.1"
