[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Adam Sasine <adam.sasine@gmail.com>"]
homepage = "https://github.com/asasine/factoriod"
repository = "https://github.com/asasine/factoriod"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
factoriod.path = "crates/factoriod"
nutype = { version = "0.6", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
systemd-directories = "0.1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xz2 = "0.1"

# dev-dependencies
serde_json = "1.0.114"
tempfile = "3.10.1"
