[package]
name = "factoriod"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
default-run = "factoriod"

[dependencies]
clap.workspace = true
nutype.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
strum.workspace = true
systemd-directories.workspace = true
tar.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xz2.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
