[package]
name = "factorio-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
tar = "0.4"
tracing = "0.1"
xz2 = "0.1"
